# lichessscrap

./: .gitignore  Cargo.toml  DATABASE.md  README.md  both.arg  check.arg  executor.py  full.arg  globals.arg  print.arg  python_crawler.py  sample.arg  write.arg
queries/: B10_WinrateELODifference.sql  B1_MostPopularOpenings.sql  B1_MostPopularOpeningsALL.sql  B2_20MostPopularOpeningsMonthly.sql  B3_CreateFinalTypeTable.sql  B4_CommonFinalsByOpening.sql  B5_FinalsByELO.sql  B6_CommonFinalsByRuleSet.sql  B7_OpeningsByELO.sql  B8_FinalVictoriesByELO.sql  create_final_type_table.sql  evolucion_aperturas_mensual.sql  finals-elo.sql  finalscomuns-apertura.sql  tipuspartida-finals.sql  win_rate_by_final_type_and_elo.sql
src/: args.rs  attributes.rs  collector.rs  comment_iterator.rs  comments.rs  crawler.rs  database.rs  db.rs  game.rs  headers.rs  lib.rs  main.rs  move.rs  reader.rs  serializer.rs  stats.rs
src/adapter/: mod.rs  mysql.rs
src/args/: log.rs  mod.rs
src/attributes/: attribute.rs  board_configuration.rs  error.rs  eval.rs  final_configuration.rs  mod.rs  move.rs  move_descriptor.rs  pieces.rs  position.rs  ruleset.rs  time_control.rs
src/attributes/datetime/: clk.rs  date.rs  mod.rs  utc_date.rs  utc_time.rs
src/attributes/end/: mod.rs  result.rs  termination.rs
src/attributes/opening/: eco.rs  mod.rs
src/attributes/player/: elo.rs  mod.rs  title.rs
src/constants/: comments.rs  headers.rs  mod.rs
src/data/: game.rs  mod.rs  move.rs
src/sql/: create-database.sql  create-finalconf.sql  create-game.sql  create-move.sql  create-opening.sql  create-player.sql  create-ruleset.sql  create-tables.sql  insert-finalconf.sql  insert-game.sql  insert-move.sql  insert-opening.sql  insert-player.sql  insert-ruleset.sql  inserts-game.sql  select-finalconf.sql  select-opening.sql  select-player.sql  select-ruleset.sql  view-descriptor.sql  view-finalboard.sql  view-piecesleft.sql
src/visitors/: checker.rs  collector.rs  comment_iterator.rs  crawler.rs  database.rs  mod.rs  stats.rs
src/visitors/checkcollect/: checker.rs  collector.rs  mod.rs
src/visitors/serializer/: csv.rs  db.rs  manual.rs  mod.rs  serde.rs
tests/: benchmark.rs  comm_iter_bench.rs  csv_bench.rs  datetime_bench.rs
