[package]
name = "lichess"
version = "0.1.0"
edition = "2024"
authors = ["Sílvia Elisabeth Romero García <silviae.romgar@gmail.com>", "Tai Villanueva Saiz"]
description = "A scrapper for files from the Lichess database that generates data for a MySQL database."

[dependencies]
argfile = "0.2.1"
chrono = { version = "0.4.40", optional = true }
clap = { version = "4.5.35", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
convert_case = { version = "0.8.0", optional = true }
csv = { version = "1.3.1", optional = true }
deranged = "0.4.0"
log = "0.4.27"
memchr = { version = "2.7.4", optional = true }
pgn-reader = "0.26.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
shakmaty = "0.27.3"
simplelog = "0.12.2"
time = "0.3.41"
zstd = { version = "0.13.3", optional = true }

[features]
default = ["memchr", "zstd", "chrono"]
full-collect = ["dep:convert_case"]
chrono = ["dep:chrono"]
csv = ["dep:csv"]
serde = ["csv", "dep:serde"]
memchr = ["dep:memchr"]
zstd = ["dep:zstd"]

[profile.release]
codegen-units = 1
lto = "fat"
