[package]
name = "lichess"
version = "0.1.0"
edition = "2024"
authors = ["Sílvia Elisabeth Romero García <silviae.romgar@gmail.com>", "Tai Villanueva Saiz"]
description = "A scrapper for files from the Lichess database that generates data for a MySQL database."

[dependencies]
argfile = "0.2.1"
chrono = { version = "0.4.40", optional = true }
clap = { version = "4.5.35", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
convert_case = { version = "0.8.0", optional = true }
csv = { version = "1.3.1", optional = true }
deranged = "0.4.0"
diesel = { version = "2.2.10", features = ["mysql"], optional = true }
dotenvy = "0.15.7"
log = "0.4.27"
memchr = "2.7.4"
mysql = { version = "26.0.0", optional = true }
pgn-reader = "0.26.0"
rand = { version = "0.9.0", features = ["alloc"] }
rand_seeder = "0.4.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
shakmaty = "0.27.3"
simplelog = "0.12.2"
time = "0.3.41"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
insta = "1.42.2"
pretty_assertions = "1.4.1"

[features]
default = ["zstd", "time-mysql", "full-check"]
full-collect = ["dep:convert_case"]
full-check = []
zstd = ["dep:zstd"]
chrono = ["dep:chrono"]
time = ["time/parsing"]
csv = ["dep:csv"]
chrono-serde = ["csv", "dep:serde", "chrono/serde", "chrono"]
time-serde = ["csv", "dep:serde", "time/serde-human-readable", "time"]
time-mysql = ["dep:mysql", "mysql/time", "time"]
chrono-mysql = ["dep:mysql", "mysql/chrono", "chrono"]
time-diesel = ["dep:diesel", "diesel/time", "time"]
chrono-diesel = ["dep:diesel", "diesel/chrono", "chrono"]

[profile.release]
codegen-units = 1
lto = "fat"
